--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,9 @@
 .app.dark {
   --bg-color: #0f0fa0;
+  --inverted-bg-color: #e8e8ea;
 
   --primary-color: white;
   --secondary-color: rgb(203, 200, 200);
+  --inverted-primary-color: #041c65;
+  --inverted-secondary-color: #0449e0;
 }
