--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,10 @@
 .app.light {
   --bg-color: #e8e8ea;
+  --inverted-bg-color: #0f0fa0;
+ 
 
   --primary-color: #041c65;
   --secondary-color: #0449e0;
+  --inverted-primary-color: white;
+  --inverted-secondary-color: rgb(203, 200, 200);
 }
