--- a/src/widgets/Navbar/UI/Navbar.module.scss
+++ b/src/widgets/Navbar/UI/Navbar.module.scss
@@ -1,4 +1,4 @@
-.Navbar {
+.navbar {
   width: 100%;
   height: var(--navbar-height);
   background: var(--inverted-bg-color);
@@ -7,7 +7,7 @@
   padding: 20px;
 }
 
-.link {
+.links {
   margin-left: auto;
 }
 
